plugins {
    id 'java'
    id 'application'
}

group 'com.mku.salmon.vault'
version '3.0.3'

ext {
    junitVersion = '5.9.1'
    salmonLibVersion = '3.0.5'
    javaFxVersion = '17.0.6'
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.mku.salmon.vault.main.Main'
}

import org.gradle.internal.os.OperatingSystem
OperatingSystem os = OperatingSystem.current();

println "OS: ${os.familyName}"
println "ARCH: ${System.getProperty("os.arch")}"

if (os.isLinux()) {
    project.ext.set('os', 'linux')
	project.ext.set('salmonOS', 'linux')
} else if (os.isWindows()) {
    project.ext.set('os', 'win')
	project.ext.set('salmonOS', 'win')
} else if (os.isMacOsX()) {
    project.ext.set('os', 'mac')
	project.ext.set('salmonOS', 'macos')
}

if (System.getProperty("os.arch").equals("amd64") || System.getProperty("os.arch").equals("x86_64")) {
    project.ext.set('arch', 'x86_64')
	project.ext.set('javaFxSuffix', "${project.os}")
} else if (System.getProperty("os.arch").equals("aarch64")) {
    project.ext.set('arch', 'aarch64')
	project.ext.set('javaFxSuffix', "${project.os}-${project.arch}")
}

sourceSets {
    main {
        java {
            main.java.srcDirs += '../src'
            main.java.srcDirs += '../../java-common/src'
            main.java.srcDirs += '../../java-win-common/src'
        }
    }
    main.resources.srcDirs += '../res'
    main.resources.srcDirs += '../../common/common-res'
}

// maven local repository, make sure you run setup.bat/setup.sh from the root folder
project.ext.set('salmonLibsPath', '../../libs/salmon/')

repositories {
    // local repos, make sure you run samples/get_salmon_libs.bat
    maven {
        url uri(salmonLibsPath + "salmon-java")
    }
    maven {
        url uri(salmonLibsPath + "salmon-java-${project.salmonOS}-${project.arch}")
    }
    mavenCentral()
}

// unzipping the native library that come from maven native packages
project.ext.set('nativeLibsDir', "$buildDir/libs/natives")
configurations {
    nativeImplementation
}
task unzipNative(type: Sync) {
    from {
        configurations.nativeImplementation.collect { zipTree(it) }
    }
    into file(project.nativeLibsDir)
}
build.dependsOn unzipNative
classes.dependsOn unzipNative

// we copy the gcc native libs for aarch64 since we don't have maven packages for that arch
project.ext.set('salmonNativeLibPath', project.salmonLibsPath + '/salmon-gcc-' + project.salmonOS + '-'
+ project.arch + '/salmon-gcc-' + project.salmonOS + '-' + project.arch + '.' + project.salmonLibVersion + '/lib')
println "salmonNativeLibPath: ${project.salmonNativeLibPath}"
tasks.register('copyNativeLibs', Sync) {
    from file(project.salmonNativeLibPath)
	into file(project.nativeLibsDir + '/lib')
}
build.dependsOn copyNativeLibs
classes.dependsOn copyNativeLibs

dependencies {

    // salmon libs:
    implementation("com.mku.salmon:salmon-core:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-fs:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-win:${salmonLibVersion}")
    
	// we don't have a maven package for aarch64 so we use the gcc compiled libraries
	if(project.arch != 'aarch64') {
		implementation("com.mku.salmon:salmon-native:${salmonLibVersion}:${project.salmonOS}-${project.arch}")
		nativeImplementation("com.mku.salmon:salmon-native:${salmonLibVersion}:${project.salmonOS}-${project.arch}")
	}

    implementation 'net.java.dev.jna:jna:5.13.0'

    implementation 'com.github.pcorless.icepdf:icepdf-core:7.2.4_P01'
    implementation 'com.github.pcorless.icepdf:icepdf-viewer:7.2.4_P01'

    implementation 'org.jcodec:jcodec:0.2.5'
    implementation 'org.jcodec:jcodec-javase:0.2.5'

    implementation("org.openjfx:javafx-base:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-graphics:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-media:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-web:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-fxml:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-swing:${project.javaFxVersion}:${project.javaFxSuffix}")
    implementation("org.openjfx:javafx-controls:${project.javaFxVersion}:${project.javaFxSuffix}")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

ext {
    javaMainClass = "com.mku.salmon.vault.main.Main"
    // change this to the javafx lib path
    javaFxModules = "./libs/javafx"
    salmonLibs = "./libs/salmon"
    libs = "./libs/libs"
}

task copyDependencies(type: Sync) {
    from(configurations.default) {
        exclude("javafx*.jar")
        exclude("salmon*.jar")
    }
    into 'libs/libs'
}
build.dependsOn copyDependencies

task copySalmonDependencies(type: Sync) {
    from(configurations.default) {
        include("salmon*.jar")
    }
    into 'libs/salmon'
}
build.dependsOn copySalmonDependencies

task copyJavaFxDependencies(type: Sync) {
    from(configurations.default) {
        include("javafx*.jar")
    }
    into 'libs/javafx'
}
build.dependsOn copyJavaFxDependencies

run {
    group = "application"
    description = "Run the application"
    classpath = sourceSets.main.runtimeClasspath
    main = javaMainClass
    systemProperty "java.library.path", "build/libs/natives/lib"
    jvmArgs = ["--module-path", javaFxModules,
               "--add-modules=javafx.controls,javafx.swing,javafx.fxml,javafx.media,javafx.graphics,javafx.web"
    ]
}
run.dependsOn build

distZip.enabled = false
distTar.enabled = false
installDist.enabled = false
assembleDist.enabled = false
